# MyGuardian

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO.md  LICENSE  QUICK_PUSH.sh  README.md  SECURITY.md
backend/: .dockerignore  Dockerfile  Makefile  benchmark.csv  docker-compose.yml  locustfile.py  policy.yaml  pyproject.toml  requirements.txt  setup.py
backend/app/: auth.py  config.py  coverage.py  logging_utils.py  main.py  metrics.py  policy.py  queue.py  repair.py  retrieval.py  safety.py  schemas.py  scoring_stub.py  shadow_analytics.py  text_utils.py  tracing.py  truth.py  validation.py  version.py
backend/eval/: README.md  benchmark.csv  generate_benchmark.py  generate_cases.py  run_eval.py  seed.jsonl
backend/eval/cases/: case_01.json  case_02.json  case_03.json  case_04.json  case_05.json  case_06.json  case_07.json  case_08.json  case_09.json  case_10.json  case_11.json  case_12.json  case_13.json  case_14.json  case_15.json  case_16.json  case_17.json  case_18.json  case_19.json  case_20.json  case_21.json  case_22.json  case_23.json  case_24.json  case_25.json  case_26.json  case_27.json  case_28.json  case_29.json  case_30.json  case_31.json  case_32.json  case_33.json  case_34.json  case_35.json  case_36.json  case_37.json  case_38.json  case_39.json  case_40.json  (+10 more)
backend/ops/: alerts.yml  grafana-dashboard-prom.json  prometheus.yml
backend/tests/: run_goldens.py
backend/tests/goldens/: g1_allow.json  g2_repair_faith.json  g3_repair_cov.json  g4_block_toxic.json  (+1 more)
backend/worker/: worker.py
(+15 files in other folders)
