[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-guardrail"
version = "0.1.0"
description = "Production-ready guardrail system for RAG applications"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "MyGuardian Contributors"}
]
keywords = ["rag", "guardrail", "llm", "safety", "evaluation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "redis>=5.0.0",
    "rq>=1.15.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
    "opentelemetry-exporter-otlp-proto-http>=1.21.0",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=2.2.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/MyGuardian"
Documentation = "https://github.com/yourusername/MyGuardian#readme"
Repository = "https://github.com/yourusername/MyGuardian"
Issues = "https://github.com/yourusername/MyGuardian/issues"

